--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.7",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.0.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
